--- a/v2-apache/conf/extra/httpd-vhosts.conf
+++ b/v2-apache/conf/extra/httpd-vhosts.conf
@@ -30,6 +30,7 @@ SSLProxyCACertificateFile ${PROXY_SSL_CA_CERT}
 UseCanonicalName on
 
 <VirtualHost *:${SSL_PORT}>
+  Protocols ${H2_PROTOCOLS}
   SSLEngine ${SSL_ENGINE}
   SSLCertificateFile ${PROXY_SSL_CERT}
   SSLCertificateKeyFile ${PROXY_SSL_CERT_KEY}
